--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Tue Oct 14 19:28:20 1997  Martin Junius  <mj@fido.de>
 
-	------- CVS ci -------------------------------------------------------
+	------- CVS ci, tag R427 ---------------------------------------------
 
 	* doc/fidogate.texi (Config): documented RFCAddrMode.
 
