--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 						   -*- Indented-Text -*-
 	************** TODO list for FIDOGATE development **************
 
+	
+	* tests: ftntoss echomail problems and Kill* config.
+
+DONE	* ftn2rfc: option to *not* delete input packet for usage with
+	  ftnpack and the prog packing command.
 
 	* ^ACHRS default configurable per area.
 
