--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov 22 18:32:02 1997  Martin Junius  <mj@fido.de>
+
+	======= Release 4.2.9 ================================================
+	------- CVS ci, tag R429 ---------------------------------------------
+
 Thu Nov 20 18:47:24 1997  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
